yamls/eventrouter/networkpolicy_release-name-eventrouter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: eventrouter
    chart: eventrouter-0.4.0
    heritage: Helm
    release: RELEASE-NAME
  name: RELEASE-NAME-eventrouter
  namespace: default
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: eventrouter
      release: RELEASE-NAME
  policyTypes:
  - Ingress
